adding article list

--- a/index.html
+++ b/index.html
@@ -10,26 +10,48 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container index">
         <header>
-            <h1 class="judul">MyWebsite</h1>
+            <h1 class="judul">Simple Article</h1>
         </header>
         <section class="hero"></section>
         <main>
-            <h2>Judul Article</h2>
-            <p class="penulis">Ditulis Oleh PLWEP</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta nisi aspernatur, veritatis ipsa nesciunt harum rem quaerat nemo dolorem obcaecati commodi, temporibus delectus placeat, debitis modi quidem sunt voluptatem asperiores? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem sit libero ab tempore? Architecto excepturi cumque pariatur dolorum officia explicabo praesentium hic corrupti, voluptas placeat, eveniet aliquam, ab adipisci provident in! Ex atque cumque quisquam. Deserunt veritatis quaerat odio quis.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti minima vero animi omnis nam inventore minus rerum voluptas ad, voluptates nulla nisi fugit sunt eius quam iure. Illo temporibus repellat incidunt alias natus ducimus quis perferendis ab illum cumque assumenda, porro necessitatibus, ipsum fugiat consequuntur?Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis architecto optio assumenda laudantium fuga a tempora tenetur delectus reiciendis, voluptatem explicabo quo consectetur! Eaque porro quasi deleniti, vel aliquam fugiat beatae sed dignissimos ipsa, temporibus, quam voluptate corrupti molestiae asperiores est? Est voluptatum qui animi eius a dicta quaerat aperiam obcaecati. Magnam saepe illo expedita ad et exercitationem consequatur earum.</p>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi fuga distinctio, facere quam earum eaque atque labore corrupti quibusdam similique, optio deserunt ab laborum consequuntur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus ad dicta illo dignissimos eos eaque aut, eius perferendis dolorem dolor quam quas dolores. Ex, ipsam quaerat nulla sunt voluptate explicabo.
-            </p>
+            <h2>Article List</h2>
+            <table>
+                <tr>
+                    <th>Id</th>
+                    <th>Tittle</th>
+                    <th>Writter</th>
+                    <th>Date</th>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td><a href="article.html">Article Tittle</a></td>
+                    <td>Karyl - Priconne</td>
+                    <td>2022 - 02 - 01</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td><a href="article.html">Article Tittle</a></td>
+                    <td>Karyl - Priconne</td>
+                    <td>2022 - 02 - 01</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td><a href="article.html">Article Tittle</a></td>
+                    <td>Karyl - Priconne</td>
+                    <td>2022 - 02 - 01</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td><a href="article.html">Article Tittle</a></td>
+                    <td>Karyl - Priconne</td>
+                    <td>2022 - 02 - 01</td>
+                </tr>
+            </table>
         </main>
-        <aside>
-            <h3>Tentang Penulis</h3>
-            <img src="res/pp.jpg" alt="Profile Penulis">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium provident veritatis soluta nesciunt fugit deserunt?</p>
-        </aside>
         <footer>
-            <p class="cr">Copyright 2022 PLWEP</p>
+            <p>Copyright 2022 PLWEP</p>
         </footer>
     </div>
 </body>
