edit font and container grid

--- a/index.html
+++ b/index.html
@@ -15,41 +15,43 @@
             <h1 class="judul">Simple Article</h1>
         </header>
         <section class="hero"></section>
-        <main>
-            <h2>Article List</h2>
-            <table>
-                <tr>
-                    <th>Id</th>
-                    <th>Tittle</th>
-                    <th>Writter</th>
-                    <th>Date</th>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td><a href="article.html">Article Tittle</a></td>
-                    <td>Karyl - Priconne</td>
-                    <td>2022 - 02 - 01</td>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td><a href="article.html">Article Tittle</a></td>
-                    <td>Karyl - Priconne</td>
-                    <td>2022 - 02 - 01</td>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td><a href="article.html">Article Tittle</a></td>
-                    <td>Karyl - Priconne</td>
-                    <td>2022 - 02 - 01</td>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td><a href="article.html">Article Tittle</a></td>
-                    <td>Karyl - Priconne</td>
-                    <td>2022 - 02 - 01</td>
-                </tr>
-            </table>
-        </main>
+        <div class="content">
+            <main>
+                <h2>Article List</h2>
+                <table>
+                    <tr>
+                        <th>Id</th>
+                        <th>Tittle</th>
+                        <th>Writter</th>
+                        <th>Date</th>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td><a href="article.html">Article Tittle</a></td>
+                        <td>Karyl - Priconne</td>
+                        <td>2022 - 02 - 01</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td><a href="article.html">Article Tittle</a></td>
+                        <td>Karyl - Priconne</td>
+                        <td>2022 - 02 - 01</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td><a href="article.html">Article Tittle</a></td>
+                        <td>Karyl - Priconne</td>
+                        <td>2022 - 02 - 01</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td><a href="article.html">Article Tittle</a></td>
+                        <td>Karyl - Priconne</td>
+                        <td>2022 - 02 - 01</td>
+                    </tr>
+                </table>
+            </main>
+        </div>
         <footer>
             <p>Copyright 2022 PLWEP</p>
         </footer>
