--- a/index.html
+++ b/index.html
@@ -8,48 +8,57 @@
 
     <!-- Style -->
     <link rel="stylesheet" href="style.css">
+
+    <!-- Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container index">
+    <div class="container">
         <header>
             <h1 class="judul">Simple Article</h1>
         </header>
         <section class="hero"></section>
-        <div class="content">
+        <div class="content index">
             <main>
                 <h2>Article List</h2>
-                <table>
-                    <tr>
-                        <th>Id</th>
-                        <th>Tittle</th>
-                        <th>Writter</th>
-                        <th>Date</th>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td><a href="article.html">Article Tittle</a></td>
-                        <td>Karyl - Priconne</td>
-                        <td>2022 - 02 - 01</td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td><a href="article.html">Article Tittle</a></td>
-                        <td>Karyl - Priconne</td>
-                        <td>2022 - 02 - 01</td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td><a href="article.html">Article Tittle</a></td>
-                        <td>Karyl - Priconne</td>
-                        <td>2022 - 02 - 01</td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td><a href="article.html">Article Tittle</a></td>
-                        <td>Karyl - Priconne</td>
-                        <td>2022 - 02 - 01</td>
-                    </tr>
-                </table>
+
+                <div class="article-list">
+                    <a href="article.html">
+                        <div class="article-title">
+                            <h3>Article Title 1</h3>
+                        </div>
+                        <div class="article-subtitle">
+                            <p>#1</p>
+                            <p class="writer">Write by PLWEP</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="article-list">
+                    <a href="article.html">
+                        <div class="article-title">
+                            <h3>Article Title 2</h3>
+                        </div>
+                        <div class="article-subtitle">
+                            <p>#1</p>
+                            <p class="writer">Write by PLWEP</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="article-list">
+                    <a href="article.html">
+                        <div class="article-title">
+                            <h3>Article Title 3</h3>
+                        </div>
+                        <div class="article-subtitle">
+                            <p>#1</p>
+                            <p class="writer">Write by PLWEP</p>
+                        </div>
+                    </a>
+                </div>
             </main>
         </div>
         <footer>
